# dscache

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml  release.yml
assets/: demo.cast  demo.tape
docs/: demo.tape
examples/: quickstart.py
src/dscache/: __init__.py  attribute.py  cli.py  profiler.py  reorder.py  report.py  wrapper.py
tests/: test_attribute.py  test_profiler.py  test_profiler_honesty.py  test_reorder.py  test_report.py
web/: site.json
